index.htmlのタイトル変更 subjectA.htmlとsubjectB.htmlの追加

--- a/subjectA.html
+++ b/subjectA.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>総合システム工学科-TOP</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-<img src="img/jyobijyobi.png" alt="ジョビジョビ君"> 
-<a href="#">科目１</a>
-<a href="#">科目２</a>
+    <h1></h1>
+    <p></p>
+    <img src="#" alt=""> 
 </body>
 </html>
-
