index.htmlに自分のリンクとsubjectA.htmlに追記しました。

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
 </head>
 <body>
 <img src="img/jyobijyobi.png" alt="ジョビジョビ君"> 
-<a href="#">科目１</a>
+<a href="subjectA.html">科目１</a>
 <a href="#">科目２</a>
 </body>
 </html>
