--- a/subjectA.html
+++ b/subjectA.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>総合システム工学科</title>
 </head>
 <body>
-    <h1></h1>
-    <p></p>
-    <img src="#" alt=""> 
+    <h1>java</h1>
+    <p>中規模開発でjavaを使いwebを作ってます！！</p>
+    <img src="img/java-logo.jpg" alt="java"> 
 </body>
 </html>
