--- a/subjectB.html
+++ b/subjectB.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ITの紹介</title>
 </head>
 <body>
-    <h1></h1>
-    <p></p>
-    <img src="#" alt=""> 
+    <h1>ITシステム</h1>
+    <p>ITの分野では、コンピュータや他の電子機器、ソフトウェア、通信ネットワーク、データなど様々な要素を組み合わせ、全体として何らかの機能を発揮するひとまとまりの仕組みを情報システム、ITシステム、コンピュータシステムなどというが、これを略してシステムという</p>
+    <img src="img1/ITsisutemu.png" alt="IT"> 
 </body>
 </html>
